:lipstick: Prevent x-overflow on a narrower screen

--- a/src/_includes/stylesheets/feed.css
+++ b/src/_includes/stylesheets/feed.css
@@ -1,21 +1,20 @@
 html {
-  font-size: 14px;
-  overflow-wrap: break-word;
+  font-size: 13px;
 }
 
 body {
-  margin: 1em;
+  margin: 1.618034em;
 }
 
 .entries {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(27em, 1fr));
-  gap: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 27em), 1fr));
+  gap: 1.618034em;
 }
 
 section {
   border: 1px solid #7f7f7f;
-  border-radius: 1em;
+  border-radius: 0.5em;
   padding: 1em;
   box-sizing: border-box;
   height: max-content;
